[package]
name = "pairing"

# Remember to change version string in README.md.
version = "0.13.2"
authors = ["Sean Bowe <ewillbefull@gmail.com>"]
license = "MIT/Apache-2.0"

description = "Pairing-friendly elliptic curve library"
documentation = "https://docs.rs/pairing/"
homepage = "https://github.com/ebfull/pairing"
repository = "https://github.com/ebfull/pairing"

[dependencies]
blake2 = "0.6.1"
byteorder = "1.1.0"
clippy = { version = "0.0.174", optional = true }
rand = "0.3"
alga = "0.5.2"

[features]
unstable-features = ["expose-arith"]
expose-arith = []
u128-support = []
default = []
